--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,16 @@
 
 .home,
 .reports,
-.products{
+.products,
+.reports1-2{
   display: flex;
   height: 94vh;
   align-items: center;
   justify-content: center;
   font-size: 3rem;
   background-color: rgb(218, 165, 232);
+}
+.reports1-2{
+  background-color: rgb(0, 208, 255);
+  color: #ab49c4;
 }
